binrw/tests/ui/args_missing.stderr
error[E0277]: the trait bound `NoDefault: Default` is not satisfied
  --> tests/ui/args_missing.rs:12:8
   |
12 |     a: Foo,
   |        ^^^ the trait `Default` is not implemented for `NoDefault`
   |
   = note: required for `(NoDefault,)` to implement `Default`
   = note: required for `(NoDefault,)` to implement `MissingArgsDirective`
note: required by a bound in `Required::args`
  --> src/private.rs
   |
   | pub trait Required: MissingArgsDirective {
   |                     ^^^^^^^^^^^^^^^^^^^^ required by this bound in `Required::args`
   |     fn args() -> Self;
   |        ---- required by a bound in this associated function
help: consider annotating `NoDefault` with `#[derive(Default)]`
   |
4  + #[derive(Default)]
5  | struct NoDefault;
   |
